@@ -1,19 +1,22 @@
 package com.romanpulov.odeonwss.service;
 
 import com.romanpulov.odeonwss.builder.entitybuilder.EntityArtifactBuilder;
-import com.romanpulov.odeonwss.config.DatabaseConfiguration;
-import com.romanpulov.odeonwss.db.DbManagerService;
 import com.romanpulov.odeonwss.entity.*;
+import com.romanpulov.odeonwss.generator.DataGenerator;
+import com.romanpulov.odeonwss.generator.FileTreeGenerator;
 import com.romanpulov.odeonwss.repository.*;
 import com.romanpulov.odeonwss.service.processor.model.*;
 import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.*;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.jdbc.Sql;
 
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -23,10 +26,361 @@ import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
 @TestInstance(TestInstance.Lifecycle.PER_CLASS)
 @TestMethodOrder(MethodOrderer.OrderAnnotation.class)
-@ActiveProfiles(value = "test-07")
+//@ActiveProfiles(value = "test-07")
 public class ServiceProcessValidateMP3Test {
     public static final ProcessorType PROCESSOR_TYPE = ProcessorType.MP3_VALIDATOR;
+    public static final List<String> ARTIST_NAMES = List.of("Aerosmith", "Kosheen", "Various Artists");
     private ArtifactType artifactType;
+
+    @Value("${test.data.path}")
+    String testDataPath;
+
+    private enum TestFolder {
+        TF_SERVICE_PROCESS_VALIDATE_MP3_TEST_OK,
+        TF_SERVICE_PROCESS_VALIDATE_MP3_TEST_MP3_WRONG_ARTIFACT_TITLE,
+        TF_SERVICE_PROCESS_VALIDATE_MP3_TEST_MP3_WRONG_COMPOSITION_TITLE,
+        TF_SERVICE_PROCESS_VALIDATE_MP3_TEST_MP3_WRONG_DUPLICATE_TRACK,
+        TF_SERVICE_PROCESS_VALIDATE_MP3_TEST_MP3_MISSING_ARTIST,
+        TF_SERVICE_PROCESS_VALIDATE_MP3_TEST_MP3_ADDITIONAL_ARTIST,
+        TF_SERVICE_PROCESS_VALIDATE_MP3_TEST_MP3_MISSING_ARTIFACT,
+        TF_SERVICE_PROCESS_VALIDATE_MP3_TEST_MP3_MISSING_TRACKS
+    }
+
+    private Map<TestFolder, Path> tempFolders;
+
+    @BeforeAll
+    public void setup() throws Exception {
+        this.artifactType = artifactTypeRepository.getWithMP3();
+
+        this.tempFolders = FileTreeGenerator.createTempFolders(TestFolder.class);
+
+        FileTreeGenerator.generateFromJSON(
+                tempFolders.get(TestFolder.TF_SERVICE_PROCESS_VALIDATE_MP3_TEST_OK),
+                this.testDataPath,
+                """
+{
+    "Aerosmith": {
+        "2004 Honkin'On Bobo": {
+            "01 - Road Runner.mp3": "sample_mp3_1.mp3",
+            "02 - Shame, Shame, Shame.mp3": "sample_mp3_1.mp3",
+            "03 - Eyesight To The Blind.mp3": "sample_mp3_1.mp3",
+            "04 - Baby, Please Don't Go.mp3": "sample_mp3_1.mp3",
+            "05 - Never Loved A Girl.mp3": "sample_mp3_1.mp3",
+            "06 - Back Back Train.mp3": "sample_mp3_1.mp3",
+            "07 - You Gotta Move.mp3": "sample_mp3_1.mp3",
+            "08 - The Grind.mp3": "sample_mp3_1.mp3",
+            "09 - I'm Ready.mp3": "sample_mp3_1.mp3",
+            "10 - Temperature.mp3": "sample_mp3_1.mp3",
+            "11 - Stop Messin' Around.mp3": "sample_mp3_1.mp3",
+            "12 - Jesus Is On The Main Line.mp3": "sample_mp3_1.mp3"
+        }
+    },
+    "Kosheen": {
+        "2004 Kokopelli": {
+            "01 - Wasting My Time.mp3": "sample_mp3_1.mp3",
+            "02 - All In My Head (Radio Edit).mp3": "sample_mp3_1.mp3",
+            "03 - Crawling.mp3": "sample_mp3_1.mp3",
+            "04 - Avalanche.mp3": "sample_mp3_1.mp3",
+            "05 - Blue Eyed Boy.mp3": "sample_mp3_1.mp3",
+            "06 - Suzy May.mp3": "sample_mp3_1.mp3",
+            "07 - Swamp.mp3": "sample_mp3_1.mp3",
+            "08 - Wish.mp3": "sample_mp3_1.mp3",
+            "09 - Coming Home.mp3": "sample_mp3_1.mp3",
+            "10 - Ages.mp3": "sample_mp3_1.mp3",
+            "11 - Recovery.mp3": "sample_mp3_1.mp3",
+            "12 - Little Boy.mp3": "sample_mp3_1.mp3"
+        },
+        "2007 Damage": {
+            "01 - Damage.mp3": "sample_mp3_2.mp3",
+            "02 - Overkill.mp3": "sample_mp3_2.mp3",
+            "03 - Like A Book.mp3": "sample_mp3_2.mp3",
+            "04 - Same Ground Again.mp3": "sample_mp3_2.mp3",
+            "05 - Guilty.mp3": "sample_mp3_2.mp3",
+            "06 - Chances.mp3": "sample_mp3_2.mp3",
+            "07 - Out Of This World.mp3": "sample_mp3_2.mp3",
+            "08 - Wish You Were Here.mp3": "sample_mp3_2.mp3",
+            "09 - Thief.mp3": "sample_mp3_2.mp3",
+            "10 - Under Fire.mp3": "sample_mp3_2.mp3",
+            "11 - Not Enough Love.mp3": "sample_mp3_2.mp3",
+            "12 - Cruel Heart.mp3": "sample_mp3_2.mp3",
+            "13 - Professional Friend.mp3": "sample_mp3_2.mp3",
+            "14 - Analogue Street Dub.mp3": "sample_mp3_2.mp3",
+            "15 - Marching Orders.mp3": "sample_mp3_2.mp3",
+            "16 - Your Life.mp3": "sample_mp3_2.mp3"
+        }
+    },
+    "Various Artists": {
+        "2000 Rock N' Roll Fantastic": {
+            "001 - Simple Minds - Gloria.MP3": "sample_mp3_3.mp3",
+            "002 - T. Jones - Jailhouse Rock.MP3": "sample_mp3_3.mp3"
+        }
+    }
+}
+                        """
+        );
+
+        FileTreeGenerator.generateFromJSON(
+                tempFolders.get(TestFolder.TF_SERVICE_PROCESS_VALIDATE_MP3_TEST_MP3_WRONG_ARTIFACT_TITLE),
+                this.testDataPath,
+                """
+{
+    "Aerosmith": {
+        "2004  Honkin'On Bobo": {
+            "01 - Road Runner.mp3": "sample_mp3_1.mp3",
+            "02 - Shame, Shame, Shame.mp3": "sample_mp3_1.mp3",
+            "03 - Eyesight To The Blind.mp3": "sample_mp3_1.mp3",
+            "04 - Baby, Please Don't Go.mp3": "sample_mp3_1.mp3",
+            "05 - Never Loved A Girl.mp3": "sample_mp3_1.mp3",
+            "06 - Back Back Train.mp3": "sample_mp3_1.mp3",
+            "07 - You Gotta Move.mp3": "sample_mp3_1.mp3",
+            "08 - The Grind.mp3": "sample_mp3_1.mp3",
+            "09 - I'm Ready.mp3": "sample_mp3_1.mp3",
+            "10 - Temperature.mp3": "sample_mp3_1.mp3",
+            "11 - Stop Messin' Around.mp3": "sample_mp3_1.mp3",
+            "12 - Jesus Is On The Main Line.mp3": "sample_mp3_1.mp3"
+        }
+    }
+}
+                        """
+        );
+
+        FileTreeGenerator.generateFromJSON(
+                tempFolders.get(TestFolder.TF_SERVICE_PROCESS_VALIDATE_MP3_TEST_MP3_WRONG_COMPOSITION_TITLE),
+                this.testDataPath,
+                """
+{
+    "Aerosmith": {
+        "2004 Honkin'On Bobo": {
+            "01 - Road Runner.mp3": "sample_mp3_1.mp3",
+            "02 - Shame, Shame, Shame.mp3": "sample_mp3_1.mp3",
+            "03 - Eyesight To The Blind.mp3": "sample_mp3_1.mp3",
+            "04-Baby, Please Don't Go.mp3": "sample_mp3_1.mp3"
+        }
+    }
+}
+                        """
+        );
+
+        FileTreeGenerator.generateFromJSON(
+                tempFolders.get(TestFolder.TF_SERVICE_PROCESS_VALIDATE_MP3_TEST_MP3_WRONG_DUPLICATE_TRACK),
+                this.testDataPath,
+                """
+{
+    "Aerosmith": {
+        "2004 Honkin'On Bobo tracks": {
+            "01 - Road Runner.mp3": "sample_mp3_1.mp3",
+            "02 - Eyesight To The Blind.mp3": "sample_mp3_1.mp3",
+            "02 - Shame, Shame, Shame.mp3": "sample_mp3_1.mp3"
+        }
+    }
+}
+                        """
+        );
+
+        FileTreeGenerator.generateFromJSON(
+                tempFolders.get(TestFolder.TF_SERVICE_PROCESS_VALIDATE_MP3_TEST_MP3_MISSING_ARTIST),
+                this.testDataPath,
+                """
+{
+    "Aerosmith": {
+        "2004 Honkin'On Bobo": {
+            "01 - Road Runner.mp3": "sample_mp3_4.mp3",
+            "02 - Shame, Shame, Shame.mp3": "sample_mp3_3.mp3",
+            "03 - Eyesight To The Blind.mp3": "sample_mp3_4.mp3",
+            "04 - Baby, Please Don't Go.mp3": "sample_mp3_4.mp3",
+            "05 - Never Loved A Girl.mp3": "sample_mp3_3.mp3",
+            "06 - Back Back Train.mp3": "sample_mp3_4.mp3",
+            "07 - You Gotta Move.mp3": "sample_mp3_6.mp3",
+            "08 - The Grind.mp3": "sample_mp3_5.mp3",
+            "09 - I'm Ready.mp3": "sample_mp3_4.mp3",
+            "10 - Temperature.mp3": "sample_mp3_3.mp3",
+            "11 - Stop Messin' Around.mp3": "sample_mp3_2.mp3",
+            "12 - Jesus Is On The Main Line.mp3": "sample_mp3_3.mp3"
+        }
+    }
+}
+                        """
+        );
+
+        FileTreeGenerator.generateFromJSON(
+                tempFolders.get(TestFolder.TF_SERVICE_PROCESS_VALIDATE_MP3_TEST_MP3_ADDITIONAL_ARTIST),
+                this.testDataPath,
+                """
+{
+  "Accept": {
+    "1983 Balls to the wall": {
+      "01 - First.mp3": "sample_mp3_4.mp3"
+    }
+  },
+  "Aerosmith": {
+    "2004 Honkin'On Bobo": {
+      "01 - Road Runner.mp3": "sample_mp3_6.mp3",
+      "02 - Shame, Shame, Shame.mp3": "sample_mp3_2.mp3",
+      "03 - Eyesight To The Blind.mp3": "sample_mp3_4.mp3",
+      "04 - Baby, Please Don't Go.mp3": "sample_mp3_1.mp3",
+      "05 - Never Loved A Girl.mp3": "sample_mp3_1.mp3",
+      "06 - Back Back Train.mp3": "sample_mp3_5.mp3",
+      "07 - You Gotta Move.mp3": "sample_mp3_2.mp3",
+      "08 - The Grind.mp3": "sample_mp3_2.mp3",
+      "09 - I'm Ready.mp3": "sample_mp3_1.mp3",
+      "10 - Temperature.mp3": "sample_mp3_6.mp3",
+      "11 - Stop Messin' Around.mp3": "sample_mp3_3.mp3",
+      "12 - Jesus Is On The Main Line.mp3": "sample_mp3_3.mp3"
+    }
+  },
+  "Kosheen": {
+    "2004 Kokopelli": {
+      "01 - Wasting My Time.mp3": "sample_mp3_2.mp3",
+      "02 - All In My Head (Radio Edit).mp3": "sample_mp3_4.mp3",
+      "03 - Crawling.mp3": "sample_mp3_5.mp3",
+      "04 - Avalanche.mp3": "sample_mp3_3.mp3",
+      "05 - Blue Eyed Boy.mp3": "sample_mp3_1.mp3",
+      "06 - Suzy May.mp3": "sample_mp3_2.mp3",
+      "07 - Swamp.mp3": "sample_mp3_4.mp3",
+      "08 - Wish.mp3": "sample_mp3_6.mp3",
+      "09 - Coming Home.mp3": "sample_mp3_6.mp3",
+      "10 - Ages.mp3": "sample_mp3_5.mp3",
+      "11 - Recovery.mp3": "sample_mp3_4.mp3",
+      "12 - Little Boy.mp3": "sample_mp3_1.mp3"
+    },
+    "2007 Damage": {
+      "01 - Damage.mp3": "sample_mp3_4.mp3",
+      "02 - Overkill.mp3": "sample_mp3_5.mp3",
+      "03 - Like A Book.mp3": "sample_mp3_6.mp3",
+      "04 - Same Ground Again.mp3": "sample_mp3_5.mp3",
+      "05 - Guilty.mp3": "sample_mp3_2.mp3",
+      "06 - Chances.mp3": "sample_mp3_3.mp3",
+      "07 - Out Of This World.mp3": "sample_mp3_2.mp3",
+      "08 - Wish You Were Here.mp3": "sample_mp3_2.mp3",
+      "09 - Thief.mp3": "sample_mp3_4.mp3",
+      "10 - Under Fire.mp3": "sample_mp3_3.mp3",
+      "11 - Not Enough Love.mp3": "sample_mp3_5.mp3",
+      "12 - Cruel Heart.mp3": "sample_mp3_3.mp3",
+      "13 - Professional Friend.mp3": "sample_mp3_2.mp3",
+      "14 - Analogue Street Dub.mp3": "sample_mp3_1.mp3",
+      "15 - Marching Orders.mp3": "sample_mp3_2.mp3",
+      "16 - Your Life.mp3": "sample_mp3_4.mp3"
+    }
+  }
+}
+                        """
+        );
+
+        FileTreeGenerator.generateFromJSON(
+                tempFolders.get(TestFolder.TF_SERVICE_PROCESS_VALIDATE_MP3_TEST_MP3_MISSING_ARTIFACT),
+                this.testDataPath,
+                """
+{
+  "Aerosmith": {
+    "2004 Honkin'On Bobo": {
+      "01 - Road Runner.mp3": "sample_mp3_3.mp3",
+      "02 - Shame, Shame, Shame.mp3": "sample_mp3_3.mp3",
+      "03 - Eyesight To The Blind.mp3": "sample_mp3_6.mp3",
+      "04 - Baby, Please Don't Go.mp3": "sample_mp3_2.mp3",
+      "05 - Never Loved A Girl.mp3": "sample_mp3_5.mp3",
+      "06 - Back Back Train.mp3": "sample_mp3_3.mp3",
+      "07 - You Gotta Move.mp3": "sample_mp3_4.mp3",
+      "08 - The Grind.mp3": "sample_mp3_5.mp3",
+      "09 - I'm Ready.mp3": "sample_mp3_1.mp3",
+      "10 - Temperature.mp3": "sample_mp3_1.mp3",
+      "11 - Stop Messin' Around.mp3": "sample_mp3_1.mp3",
+      "12 - Jesus Is On The Main Line.mp3": "sample_mp3_6.mp3"
+    }
+  },
+  "Kosheen": {
+    "2004 Kokopelli": {
+      "01 - Wasting My Time.mp3": "sample_mp3_3.mp3",
+      "02 - All In My Head (Radio Edit).mp3": "sample_mp3_5.mp3",
+      "03 - Crawling.mp3": "sample_mp3_6.mp3",
+      "04 - Avalanche.mp3": "sample_mp3_6.mp3",
+      "05 - Blue Eyed Boy.mp3": "sample_mp3_4.mp3",
+      "06 - Suzy May.mp3": "sample_mp3_3.mp3",
+      "07 - Swamp.mp3": "sample_mp3_2.mp3",
+      "08 - Wish.mp3": "sample_mp3_1.mp3",
+      "09 - Coming Home.mp3": "sample_mp3_1.mp3",
+      "10 - Ages.mp3": "sample_mp3_4.mp3",
+      "11 - Recovery.mp3": "sample_mp3_1.mp3",
+      "12 - Little Boy.mp3": "sample_mp3_1.mp3"
+    }
+  },
+  "Various Artists": {
+    "2000 Rock N' Roll Fantastic": {
+      "130 - Simple Minds - Gloria.MP3": "sample_mp3_3_capital_ext.MP3",
+      "131 - T. Jones - Jailhouse Rock.MP3": "sample_mp3_3_capital_ext.MP3"
+    }
+  }
+}
+                        """
+        );
+
+        FileTreeGenerator.generateFromJSON(
+                tempFolders.get(TestFolder.TF_SERVICE_PROCESS_VALIDATE_MP3_TEST_MP3_MISSING_TRACKS),
+                this.testDataPath,
+                """
+{
+  "Aerosmith": {
+    "2004 Honkin'On Bobo": {
+      "01 - Road Runner.mp3": "sample_mp3_1.mp3",
+      "02 - Shame, Shame, Shame.mp3": "sample_mp3_1.mp3",
+      "03 - Eyesight To The Blind.mp3": "sample_mp3_6.mp3",
+      "04 - Baby, Please Don't Go.mp3": "sample_mp3_2.mp3",
+      "05 - Never Loved A Girl.mp3": "sample_mp3_1.mp3",
+      "06 - Back Back Train.mp3": "sample_mp3_4.mp3",
+      "07 - You Gotta Move.mp3": "sample_mp3_4.mp3",
+      "08 - The Grind.mp3": "sample_mp3_4.mp3",
+      "09 - I'm Ready.mp3": "sample_mp3_2.mp3",
+      "10 - Temperature.mp3": "sample_mp3_2.mp3",
+      "11 - Stop Messin' Around.mp3": "sample_mp3_1.mp3",
+      "12 - Jesus Is On The Main Line.mp3": "sample_mp3_2.mp3"
+    }
+  },
+  "Kosheen": {
+    "2004 Kokopelli": {
+      "01 - Wasting My Time.mp3": "sample_mp3_6.mp3",
+      "05 - Blue Eyed Boy.mp3": "sample_mp3_1.mp3",
+      "06 - Suzy May.mp3": "sample_mp3_4.mp3",
+      "07 - Swamp.mp3": "sample_mp3_6.mp3",
+      "08 - Wish.mp3": "sample_mp3_3.mp3",
+      "09 - Coming Home.mp3": "sample_mp3_3.mp3",
+      "10 - Ages.mp3": "sample_mp3_6.mp3",
+      "11 - Recovery.mp3": "sample_mp3_5.mp3",
+      "12 - Little Boy.mp3": "sample_mp3_2.mp3"
+    },
+    "2007 Damage": {
+      "01 - Damage.mp3": "sample_mp3_1.mp3",
+      "02 - Overkill.mp3": "sample_mp3_5.mp3",
+      "03 - Like A Book.mp3": "sample_mp3_6.mp3",
+      "04 - Same Ground Again.mp3": "sample_mp3_2.mp3",
+      "05 - Guilty.mp3": "sample_mp3_1.mp3",
+      "06 - Chances.mp3": "sample_mp3_5.mp3",
+      "07 - Out Of This World.mp3": "sample_mp3_1.mp3",
+      "08 - Wish You Were Here.mp3": "sample_mp3_5.mp3",
+      "09 - Thief.mp3": "sample_mp3_5.mp3",
+      "10 - Under Fire.mp3": "sample_mp3_3.mp3",
+      "11 - Not Enough Love.mp3": "sample_mp3_1.mp3",
+      "12 - Cruel Heart.mp3": "sample_mp3_4.mp3",
+      "13 - Professional Friend.mp3": "sample_mp3_6.mp3",
+      "14 - Analogue Street Dub.mp3": "sample_mp3_4.mp3",
+      "15 - Marching Orders.mp3": "sample_mp3_3.mp3",
+      "16 - Your Life.mp3": "sample_mp3_3.mp3"
+    }
+  },
+  "Various Artists": {
+    "2000 Rock N' Roll Fantastic": {
+      "001 - Simple Minds - Gloria.MP3": "sample_mp3_3_capital_ext.MP3",
+      "002 - T. Jones - Jailhouse Rock.MP3": "sample_mp3_3_capital_ext.MP3"
+    }
+  }
+}
+                        """
+        );
+
+    }
+
+    @AfterAll
+    public void teardown() {
+        FileTreeGenerator.deleteTempFiles(tempFolders.values());
+    }
 
     @Autowired
     ArtifactTypeRepository artifactTypeRepository;
@@ -43,23 +397,25 @@ public class ServiceProcessValidateMP3Test {
     @Autowired
     MediaFileRepository mediaFileRepository;
 
-    @Autowired
-    DatabaseConfiguration databaseConfiguration;
-
     ProcessService service;
 
-    List<String> artistNames;
+    @Autowired
+    DataGenerator dataGenerator;
 
     @Autowired
     public ServiceProcessValidateMP3Test(ProcessService service) {
         this.service = service;
     }
 
-    private void prepareInternal() {
-        if (this.artifactType == null) {
-            this.artifactType = artifactTypeRepository.getWithMP3();
-        }
+    private void prepareArtists() {
+        dataGenerator.createArtistsFromList(ARTIST_NAMES);
+    }
 
+    private void prepareInternal() {
+        service.executeProcessor(
+                ProcessorType.MP3_LOADER,
+                tempFolders.get(TestFolder.TF_SERVICE_PROCESS_VALIDATE_MP3_TEST_OK).toString());
+        /*
         DbManagerService.loadOrPrepare(databaseConfiguration, DbManagerService.DbType.DB_LOADED_MP3, () -> {
             service.executeProcessor(ProcessorType.MP3_LOADER, null);
             assertThat(service.getProcessInfo().getProcessingStatus()).isEqualTo(ProcessingStatus.SUCCESS);
@@ -67,25 +423,23 @@ public class ServiceProcessValidateMP3Test {
             service.executeProcessor(ProcessorType.CLASSICS_IMPORTER);
             assertThat(service.getProcessInfo().getProcessingStatus()).isEqualTo(ProcessingStatus.SUCCESS);
         });
-        if (this.artistNames == null) {
-            this.artistNames = artistRepository
-                    .getAllByType(ArtistType.ARTIST)
-                    .stream()
-                    .map(Artist::getName)
-                    .sorted()
-                    .collect(Collectors.toList());
-        }
+
+         */
     }
 
     private ProcessInfo executeProcessor() {
-        service.executeProcessor(PROCESSOR_TYPE);
+        service.executeProcessor(
+                PROCESSOR_TYPE,
+                tempFolders.get(TestFolder.TF_SERVICE_PROCESS_VALIDATE_MP3_TEST_OK).toString());
         return service.getProcessInfo();
     }
 
     @Test
     @Order(1)
-    @Sql({"/schema.sql", "/data.sql", "/main_artists.sql"})
+    @Sql({"/schema.sql", "/data.sql"})
     void testLoadEmptyShouldFail() {
+        this.prepareArtists();
+
         ProcessInfo pi = executeProcessor();
         List<ProcessDetail> processDetails = pi.getProcessDetails();
         assertThat(pi.getProcessingStatus()).isEqualTo(ProcessingStatus.FAILURE);
@@ -126,8 +480,9 @@ public class ServiceProcessValidateMP3Test {
 
     @Test
     @Order(2)
-    @Sql({"/schema.sql", "/data.sql", "/main_artists.sql"})
+    @Sql({"/schema.sql", "/data.sql"})
     void testLoad() {
+        this.prepareArtists();
         this.prepareInternal();
         assertThat(artistRepository.getAllByType(ArtistType.ARTIST).size()).isEqualTo(3);
     }
@@ -241,7 +596,9 @@ public class ServiceProcessValidateMP3Test {
     @Test
     @Order(4)
     void testWrongTitleMissingFileArtist() {
-        service.executeProcessor(PROCESSOR_TYPE, "../odeon-test-data/wrong_artifact_title/");
+        service.executeProcessor(
+                PROCESSOR_TYPE,
+                tempFolders.get(TestFolder.TF_SERVICE_PROCESS_VALIDATE_MP3_TEST_MP3_WRONG_ARTIFACT_TITLE).toString());
         ProcessInfo pi = service.getProcessInfo();
         List<ProcessDetail> processDetails = pi.getProcessDetails();
 
@@ -271,7 +628,9 @@ public class ServiceProcessValidateMP3Test {
     @Test
     @Order(5)
     void testMissingFileArtist() {
-        service.executeProcessor(PROCESSOR_TYPE, "../odeon-test-data/validation_mp3_missing_artist/");
+        service.executeProcessor(
+                PROCESSOR_TYPE,
+                tempFolders.get(TestFolder.TF_SERVICE_PROCESS_VALIDATE_MP3_TEST_MP3_MISSING_ARTIST).toString());
         ProcessInfo pi = service.getProcessInfo();
         List<ProcessDetail> processDetails = pi.getProcessDetails();
 
@@ -291,7 +650,9 @@ public class ServiceProcessValidateMP3Test {
     @Test
     @Order(6)
     void testAdditionalFileArtist() {
-        service.executeProcessor(PROCESSOR_TYPE, "../odeon-test-data/validation_mp3_additional_artist/");
+        service.executeProcessor(
+                PROCESSOR_TYPE,
+                tempFolders.get(TestFolder.TF_SERVICE_PROCESS_VALIDATE_MP3_TEST_MP3_ADDITIONAL_ARTIST).toString());
         ProcessInfo pi = service.getProcessInfo();
         List<ProcessDetail> processDetails = pi.getProcessDetails();
 
@@ -311,7 +672,9 @@ public class ServiceProcessValidateMP3Test {
     @Test
     @Order(7)
     void testMissingFileArtifact() {
-        service.executeProcessor(PROCESSOR_TYPE, "../odeon-test-data/validation_mp3_missing_artifact/");
+        service.executeProcessor(
+                PROCESSOR_TYPE,
+                tempFolders.get(TestFolder.TF_SERVICE_PROCESS_VALIDATE_MP3_TEST_MP3_MISSING_ARTIFACT).toString());
         ProcessInfo pi = service.getProcessInfo();
         List<ProcessDetail> processDetails = pi.getProcessDetails();
 
@@ -338,7 +701,9 @@ public class ServiceProcessValidateMP3Test {
     @Test
     @Order(8)
     void testMissingFileTracks() {
-        service.executeProcessor(PROCESSOR_TYPE, "../odeon-test-data/validation_mp3_missing_tracks/");
+        service.executeProcessor(
+                PROCESSOR_TYPE,
+                tempFolders.get(TestFolder.TF_SERVICE_PROCESS_VALIDATE_MP3_TEST_MP3_MISSING_TRACKS).toString());
         ProcessInfo pi = service.getProcessInfo();
         List<ProcessDetail> processDetails = pi.getProcessDetails();
 
@@ -378,8 +743,9 @@ public class ServiceProcessValidateMP3Test {
 
     @Test
     @Order(11)
-    @Sql({"/schema.sql", "/data.sql", "/main_artists.sql"})
+    @Sql({"/schema.sql", "/data.sql"})
     void validateOk() {
+        this.prepareArtists();
         this.prepareInternal();
         ProcessInfo pi = executeProcessor();
         List<ProcessDetail> processDetails = pi.getProcessDetails();
@@ -474,10 +840,17 @@ public class ServiceProcessValidateMP3Test {
 
     @Test
     @Order(12)
-    @Sql({"/schema.sql", "/data.sql", "/main_artists.sql"})
+    @Sql({"/schema.sql", "/data.sql"})
     void containsFilesShouldFail() {
+        this.prepareArtists();
         this.prepareInternal();
-        service.executeProcessor(PROCESSOR_TYPE, "../odeon-test-data/ok/MP3 Music/Kosheen/2004 Kokopelli");
+        service.executeProcessor(
+                PROCESSOR_TYPE,
+                Paths.get(
+                        tempFolders.get(TestFolder.TF_SERVICE_PROCESS_VALIDATE_MP3_TEST_OK).toString(),
+                        "Kosheen",
+                        "2004 Kokopelli"
+                ).toString());
         ProcessInfo pi = service.getProcessInfo();
         List<ProcessDetail> processDetails = pi.getProcessDetails();
 
@@ -486,7 +859,7 @@ public class ServiceProcessValidateMP3Test {
                 new ProcessDetail(
                         ProcessDetailInfo.fromMessageItems(
                                 "Artists not in files or have no artifacts and tracks",
-                                artistNames),
+                                ARTIST_NAMES),
                         ProcessingStatus.FAILURE,
                         null,
                         null)
@@ -495,8 +868,9 @@ public class ServiceProcessValidateMP3Test {
 
     @Test
     @Order(14)
-    @Sql({"/schema.sql", "/data.sql", "/main_artists.sql"})
+    @Sql({"/schema.sql", "/data.sql"})
     void testNewArtifactInDbShouldFail() {
+        this.prepareArtists();
         this.prepareInternal();
 
         Artist artist = artistRepository.findAll().iterator().next();
@@ -542,8 +916,9 @@ public class ServiceProcessValidateMP3Test {
 
     @Test
     @Order(15)
-    @Sql({"/schema.sql", "/data.sql", "/main_artists.sql"})
+    @Sql({"/schema.sql", "/data.sql"})
     void testNewArtifactInFilesShouldFail() {
+        this.prepareArtists();
         this.prepareInternal();
         Artifact artifact = artifactRepository
                 .findAll()
@@ -585,15 +960,16 @@ public class ServiceProcessValidateMP3Test {
 
     @Test
     @Order(16)
-    @Sql({"/schema.sql", "/data.sql", "/main_artists.sql"})
+    @Sql({"/schema.sql", "/data.sql"})
     void testNewFileInDbShouldFail() {
+        this.prepareArtists();
         this.prepareInternal();
         Artifact artifact = artifactRepository.getAllByArtifactTypeWithTracks(artifactType)
                 .stream()
                 .filter(a -> a.getTitle().equals("Kokopelli") && !Objects.isNull(a.getYear()) && a.getYear().equals(2004L))
                 .findFirst().orElseThrow();
         Track track = trackRepository
-                .findByIdWithMediaFiles(artifact.getTracks().get(0).getId())
+                .findByIdWithMediaFiles(artifact.getTracks().getFirst().getId())
                 .orElseThrow();
 
         MediaFile mediaFile = new MediaFile();
@@ -624,8 +1000,9 @@ public class ServiceProcessValidateMP3Test {
 
     @Test
     @Order(17)
-    @Sql({"/schema.sql", "/data.sql", "/main_artists.sql"})
+    @Sql({"/schema.sql", "/data.sql"})
     void testNewFileInFilesShouldFail() {
+        this.prepareArtists();
         this.prepareInternal();
         MediaFile mediaFile = mediaFileRepository
                 .getMediaFilesByArtifactType(artifactType)
@@ -662,8 +1039,9 @@ public class ServiceProcessValidateMP3Test {
 
     @Test
     @Order(18)
-    @Sql({"/schema.sql", "/data.sql", "/main_artists.sql"})
+    @Sql({"/schema.sql", "/data.sql"})
     void testNewArtifactFileInDbShouldFail() {
+        this.prepareArtists();
         this.prepareInternal();
         Artifact artifact = artifactRepository.getAllByArtifactType(artifactType)
                 .stream()
@@ -695,8 +1073,9 @@ public class ServiceProcessValidateMP3Test {
 
     @Test
     @Order(19)
-    @Sql({"/schema.sql", "/data.sql", "/main_artists.sql"})
+    @Sql({"/schema.sql", "/data.sql"})
     void testNewArtifactFileInFilesShouldFail() {
+        this.prepareArtists();
         this.prepareInternal();
         MediaFile mediaFile = mediaFileRepository.getMediaFilesByArtifactType(artifactType)
                 .stream()
@@ -724,6 +1103,7 @@ public class ServiceProcessValidateMP3Test {
     @Order(20)
     @Sql({"/schema.sql", "/data.sql"})
     void testMediaFileSizeDifferentShouldFail() {
+        this.prepareArtists();
         this.prepareInternal();
 
         MediaFile mediaFile = mediaFileRepository
@@ -757,6 +1137,7 @@ public class ServiceProcessValidateMP3Test {
     @Order(21)
     @Sql({"/schema.sql", "/data.sql"})
     void testArtifactMediaFileSizeDifferentShouldFail() {
+        this.prepareArtists();
         this.prepareInternal();
 
         Artifact artifact = artifactRepository.getAllByArtifactType(artifactType)
@@ -767,7 +1148,7 @@ public class ServiceProcessValidateMP3Test {
         artifact.setSize(Optional.ofNullable(artifact.getSize()).orElse(0L) + 530);
         artifactRepository.save(artifact);
 
-        service.executeProcessor(PROCESSOR_TYPE);
+        executeProcessor();
 
         ProcessInfo pi = service.getProcessInfo();
         Assertions.assertThat(pi.getProcessingStatus()).isEqualTo(ProcessingStatus.FAILURE);
@@ -787,6 +1168,7 @@ public class ServiceProcessValidateMP3Test {
     @Order(22)
     @Sql({"/schema.sql", "/data.sql"})
     void testArtifactMediaFileDurationDifferentShouldFail() {
+        this.prepareArtists();
         this.prepareInternal();
 
         Artifact artifact = artifactRepository.getAllByArtifactType(artifactType)
@@ -815,6 +1197,7 @@ public class ServiceProcessValidateMP3Test {
     @Order(23)
     @Sql({"/schema.sql", "/data.sql"})
     void testArtifactTrackDurationDifferentShouldFail() {
+        this.prepareArtists();
         this.prepareInternal();
 
         Track track = trackRepository
@@ -823,14 +1206,11 @@ public class ServiceProcessValidateMP3Test {
                 .filter(t -> t.getTitle().equals("Thief"))
                 .findFirst()
                 .orElseThrow();
-        Artifact artifact = artifactRepository
-                .findById(track.getArtifact().getId())
-                .orElseThrow();
 
         track.setDuration(Optional.ofNullable(track.getDuration()).orElse(0L) + 5);
         trackRepository.save(track);
 
-        service.executeProcessor(PROCESSOR_TYPE);
+        executeProcessor();
 
         ProcessInfo pi = service.getProcessInfo();
         Assertions.assertThat(pi.getProcessingStatus()).isEqualTo(ProcessingStatus.FAILURE);
